--- a/docker-compose.kb-dev.yml
+++ b/docker-compose.kb-dev.yml
@@ -5,6 +5,8 @@ volumes:
   pip_cache:
   site_packages:
   vscode_server:
+  caddy_data:
+  caddy_config:
 
 networks:
   ckan-net:
@@ -13,6 +15,10 @@ networks:
 services:
 
   ckan:
+    depends_on:
+      - db
+      - solr
+      - redis
     networks:
       - ckan-net
     build:
@@ -22,12 +28,9 @@ services:
         - TZ=${TZ}
     env_file:
       - .env
-    links:
-      - db
-      - solr
-      - redis
-    ports:
-      - "0.0.0.0:${CKAN_PORT_HOST}:5000"
+
+    expose:
+      - "5000"
     volumes:
       - ckan_storage:/var/lib/ckan
       - ./src:/srv/app/src_extensions
@@ -76,9 +79,12 @@ services:
   solr:
     networks:
       - ckan-net
+    # build:
+    #   context: solr/
     image: ckan/ckan-solr:${SOLR_IMAGE_VERSION}
     volumes:
       - solr_data:/var/solr
+      - ./solr/schema.xml:/var/solr/data/ckan/conf/managed-schema
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "-qO", "/dev/null", "http://localhost:8983/solr/"]
@@ -90,3 +96,24 @@ services:
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "-e", "QUIT"]
+
+  caddy:
+    image: caddy:latest
+    container_name: caddy
+    restart: unless-stopped
+    networks:
+      - ckan-net
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/caddy_config
+    depends_on:
+      - ckan
+    healthcheck:
+      test: ["CMD", "caddy", "version"]
+      interval: 60s
+      timeout: 10s
+      retries: 3
